appId: com.example.fibu
---
- launchApp:
    clearState: false
- tapOn:
    text: ".*(Weiter|Next).*"
    optional: true
- tapOn:
    text: ".*(Später einrichten|Set Up Later|Weiter|Next).*"
    optional: true
- tapOn:
    text: ".*(Jetzt loslegen|Get Started).*"
    optional: true
- tapOn:
    text: ".*(Übersicht|Overview).*"
    optional: true
- tapOn:
    text: ".*(Aufgaben|Tasks).*"
    optional: true
- tapOn:
    text: ".*(Einstellungen|Settings).*"
    optional: true
- tapOn:
    text: ".*(Übersicht|Overview).*"
    optional: true
